tests/Metalama.Framework.Tests.AspectTests/Tests/Aspects/InvalidCode/IncompleteType.cs
using Metalama.Framework.Aspects;

namespace Metalama.Framework.Tests.AspectTests.Tests.Aspects.InvalidCode.IncompleteType;

#if TESTRUNNER
class Aspect :

[Aspect]
class Target;
#endif